[`SCSSv4.0.1`] Fixed footer on mobile

--- a/css/_globals/_mq.scss
+++ b/css/_globals/_mq.scss
@@ -75,6 +75,8 @@
 
     footer {
         font-size: .7rem;
+        margin: 0 auto;
+        max-width: 90%;
     }
 
     .labels {
